1. fix ui bug: sticky header on the top 2. fix ui bug: show the content covered by bottom navbar

--- a/src/assets/css/index.less
+++ b/src/assets/css/index.less
@@ -10,3 +10,10 @@
     width: 100%;
     height: inherit; //包裹内容
 }
+
+.sticky-header{ /*使header始终在顶部*/
+    z-index: 10;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
